# Verdete

./: .gitignore  Cargo.toml  dockerfile  get_wmi.xml  main.py  requirements.txt  results.json
examples/: hello-redis.rs
resources/: config.toml  test.ps1  wmi.py
src/: main.rs  redis-server.rs
src/api/: __init__.py  fastapi_app.py  winrm_host_groups.py  winrm_task_group.py
src/database/: db_handler.py
src/databases/: mod.rs
src/injector/: ldap_injector.py
src/injectors/: mod.rs
src/soap/: soap.rs
src/trigger/: timer_trigger.py
src/util/: ldap.py  password_manager.py  task_formatter.py  timer.py
src/windows/: identify.xml
src/windows/default_scripts/: wmi.toml
src/windows/transport/: mod.rs  transport_structure.rs  wmi_structure.rs
src/winrm/: WMITaskGroup.py  essential.ps1  essential2.ps1  host.py  host_group.py  nonessential.ps1  secondary.ps1  task.py  task_group.py  tertiary.ps1  windows.py  wmi_task_group.py
test/: api_test.py  host_groups_test.py  wmi_test.py
tests/: snmp
