[package]
name = "Verdete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0", features=["full"]}
reqwest = {version = "0.11", features=["json"]}
tokio-postgres = "0.7.0"
chrono = "0.4.26"
regex = "1.9"
string-builder = "0.2"